# regression-forecaster

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/data/: data.yaml
config/general/: general.yaml
src/evaluation/: model_report.py
src/models/: base_model.py  gradient_boosting.py
tests/e2e/: test_dummy.py
tests/unit/test_evaluation/: test_model_report.py
tests/unit/test_models/: conftest.py  test_base_model.py  test_gradient_boosting.py
