[project]
name = "regression-forecaster"
version = "0.1.0"
description = "A clean reference implementation for regression forecasting, built around a consistent model abstraction."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "xgboost>=2.0.0",
    "shap>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "C90",
    "N",
    "UP",
    "B",
    "A",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
duplicate_code_detection = false
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
